--- a/styles/index.css
+++ b/styles/index.css
@@ -300,6 +300,8 @@ header {
 @media screen and (min-width: 320px) and (max-width: 768px) {
   body {
     overflow-x: hidden;
+    width: max-content;
+    overflow-x: hidden;
   }
 
   header {
