--- a/styles/index.css
+++ b/styles/index.css
@@ -300,7 +300,7 @@ header {
 @media screen and (min-width: 320px) and (max-width: 768px) {
   body {
     overflow-x: hidden;
-    width: auto;
+    width: 400px;
     overflow-x: hidden;
   }
 
