--- a/styles/index.css
+++ b/styles/index.css
@@ -299,9 +299,7 @@ header {
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
   body {
-    overflow-x: hidden;
-    width: 400px;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 
   header {
