--- a/styles/index.css
+++ b/styles/index.css
@@ -297,7 +297,7 @@ header {
   transform: scale(1.2);
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 400) {
   body {
     overflow-x: hidden !important;
   }
@@ -427,6 +427,12 @@ header {
     height: 280px;
     margin: 0 -3px;
     padding-top: 30px;
+  }
+
+  .slider img {
+    flex: 2 0 100%;
+    scroll-snap-align: start;
+    object-fit: contain;
   }
 
   .project-desciption {
