--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 :root {
@@ -297,9 +298,9 @@ header {
   transform: scale(1.2);
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 320px) and (max-width: 768px) {
   body {
-    overflow-x: hidden !important;
+    overflow-x:hidden;
   }
 
   header {
