--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 :root {
@@ -298,9 +297,9 @@ header {
   transform: scale(1.2);
 }
 
-@media screen and (max-width: 320px) and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   body {
-    overflow-x:hidden;
+    overflow-x: hidden !important;
   }
 
   header {
@@ -411,6 +410,7 @@ header {
   .project-container {
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
     margin-bottom: 350px;
     height: 430px;
   }
@@ -424,9 +424,9 @@ header {
 
   .slider-wrapper {
     position: relative;
-    width: 400px;
-    height: 280px;
-    margin: 0 -3px;
+    width: 550px;
+    height: auto;
+    margin: 0 -70px;
     padding-top: 30px;
   }
 
@@ -437,7 +437,7 @@ header {
   }
 
   .project-desciption {
-    margin: 10px 0;
+    margin: 30px 0;
     padding: 20px;
     width: 360px;
     height: 300px;
@@ -450,7 +450,7 @@ header {
 
   .slider-mobile {
     position: relative;
-    top: -390px;
+    top: -430px;
   }
 
   .map-tags img {
