--- a/styles/index.css
+++ b/styles/index.css
@@ -448,6 +448,11 @@ header {
     left: 30px;
   }
 
+  .project-3{
+    position: relative;
+    top: -100px;
+  }
+
   .map-tags img {
     width: 130px;
   }
