--- a/styles/index.css
+++ b/styles/index.css
@@ -299,7 +299,7 @@ header {
 }
 
 @media (max-width: 768px) {
-  body{
+  body {
     overflow-x: hidden !important;
   }
 
@@ -442,15 +442,25 @@ header {
     margin-bottom: -30px;
   }
 
-  .right{
+  .right {
     position: relative;
     top: -20px;
     left: 30px;
   }
 
-  .project-3-container{
+  .project-3-bar {
     position: relative;
     top: -100px;
+  }
+
+  .project-3-container {
+    position: relative;
+    top: -100px;
+  }
+
+  .mobile{
+    position: relative;
+    top: -30px;
   }
 
   .map-tags img {
