--- a/styles/index.css
+++ b/styles/index.css
@@ -298,7 +298,7 @@ header {
   transform: scale(1.2);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 500px) {
   body {
     overflow-x: hidden !important;
   }
@@ -463,7 +463,7 @@ header {
     top: -30px;
   }
 
-  .slider-wrapper img { 
+  .slider img { 
     width: auto;
     height: auto;
   }
