--- a/styles/index.css
+++ b/styles/index.css
@@ -458,19 +458,19 @@ header {
     top: -100px;
   }
 
-  .mobile{
+  .mobile {
     position: relative;
     top: -30px;
   }
 
-  .slider-wrapper{
+  .slider-wrapper {
     width: 250px;
     height: 300px;
   }
 
-  .slider img { 
-    width: 300px;
-    height: fit-content;
+  .slide-img {
+    width: 100%;
+    height: 100%;
   }
 
   .map-tags img {
