--- a/styles/index.css
+++ b/styles/index.css
@@ -437,7 +437,7 @@ header {
 
   .mobile-descpt {
     position: relative;
-    top: -30px;
+    top: -60px;
   }
 
   .slider-mobile {
@@ -481,7 +481,7 @@ header {
   .slider-nav {
     position: relative;
     top: 20px;
-    left: 300px;
+    text-align: center;
   }
 
   .map-tags img {
