--- a/styles/index.css
+++ b/styles/index.css
@@ -463,11 +463,6 @@ header {
     top: -100px;
   }
 
-  .mobile {
-    position: relative;
-    top: -30px;
-  }
-
   .slider-wrapper {
     width: 350px;
     height: 350px;
@@ -481,7 +476,7 @@ header {
   .slider-nav {
     position: relative;
     top: 20px;
-    text-align: center;
+    margin: 0 auto;
   }
 
   .map-tags img {
