--- a/styles/index.css
+++ b/styles/index.css
@@ -300,7 +300,7 @@ header {
 
 @media (max-width: 500px) {
   body {
-    height: 2000px;
+    height: 1800px !important;
     overflow-x: hidden !important;
   }
 
